--- a/Fraud Detection Model.ipynb
+++ b/Fraud Detection Model.ipynb
@@ -447,7 +447,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv('C:/Users/CHANDAN PATEL/Downloads/creditcard.csv (1)/creditcard.csv')\n",
+    "df = pd.read_csv('C:/Users/Downloads/creditcard.csv (1)/creditcard.csv')\n",
     "df"
    ]
   },
